templates/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubo-gateway-service
  labels:
    app: kubo
spec:
  type: ClusterIP
  selector:
    app: kubo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
