templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubo-service
  labels:
    app: kubo
spec:
  type: ClusterIP
  selector:
    app: kubo
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
